syntax = "proto3";

option csharp_namespace = "ServerAdmin";

package profile;

service Perfil {
  rpc CrearPerfil (PerfilData) returns (Response);
  rpc EliminarPerfil (PerfilIdentifier) returns (Response);
  rpc EditarPerfil (PerfilData) returns (Response);
}

message PerfilIdentifier {
  string email = 1;
}

message PerfilData {
  string email = 1;
  string descripcion = 2;
  string habilidades = 3;
}

message Response {
  string message = 1;
}
